--- a/rapport/rapport_planethacks.tex
+++ b/rapport/rapport_planethacks.tex
@@ -400,5 +400,12 @@ Le travail en groupe n'était pas une déouverte, mais nous avions pu confirmer 
 Globalement, nous n'avons pas apporté d'importantes fonctionnalités au projet, ne serait-ce la possibilité d'enregistrer plusieurs étoiles dans un même fichier de sauvegarde qui n'était pas demandé. Autre détail, nous pouvons aussi lancer ou couper de la musique, mais nous n'avons pas implémenté le fait de choisir celle que l'on veut. Pour ce qui est de la conception, nous avions pensé que le paradigme MVC était le meilleur moyen pour réaliser le projet, c'est pourquoi nous nous somme tourné vers cette solution. 
 
 \subsection{Améliorations futures}
+Pour ce qui est des améliorations possibles de l'application, nous avons pensé à un système de ``Drag and drop'' pour le placement des étoiles et satellites, à la place d'un menu où l'on doit rentrer nos coordonnées à la main. Ceci permetterai de créer des systèmes planétaires plus rapidement. Toute fois, il reste important de conserver la possibilité de rentrer les coordonnées manuellement afin de pouvoir construire de manière précise les astres.\\
+
+Pour ce qui est du réalisme de l'application, nous avions pensé à plusieurs améliorations. Tout d'abord, nous pourrions prendre en compte la masse des astres, composante qui est prise en compte dans la loi de Kepler. Ceci donnerai un aspect plus vrai sur la rotation des astres. 
+
+Au niveau de l'affichage de ceux-ci, nous pensions qu'établir une relation d'échelle entre les astres permettrai de construire un univers plus probable, afin de ne pas avoir de satellites plus gros que leur astre référent. Il en est de même pour la masse. De plus, pour avoir un réalisme plus prononcé, il serait intéressant de modéliser un astre par plusieurs images qui représenteraient chacune un angle de vue différent, et de les adapter en fonction de la position engendrée par sa rotation.\\
+
+Enfin, pour gagner en souplesse d'enregistrement, il pourrait être intéressant de pouvoir fusionner deux sauvegardes afin d'avoir plusieurs systèmes créés indépendamment sur le même écran. Ceci implique d'autres fonctionnalités, comme le fait de zoomer et dézoomer sur la vision générale des astres, ou encore de pouvoir déplacer une étoile ainsi que tous ses satellites récursivement à l'aide d'un drag and drop.
 
 \end{document}
